# ftxui-game

./: .gitignore  CMakeLists.txt  Makefile  README.md  flake.nix  shell.nix
src/: array2d.hpp  main.cpp
